force-app/main/default/objects/B2BMarketSettings__c/B2BMarketSettings__c.object-meta.xml
<CustomObject>
    <label>B2B Market Setting</label>
    <nameField>
        <label>B2B Market Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Market Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>