force-app/main/default/objects/B2BMarketSettings__c/fields/B2BPaymentSetting__c.field-meta.xml
<CustomField>
    <fullName>B2BPaymentSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Payment Setting</label>
    <referenceTo>B2BPaymentSettings__c</referenceTo>
    <relationshipLabel>B2B Market Settings</relationshipLabel>
    <relationshipName>B2B_Market_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>