force-app/main/default/objects/B2BMarketSettings__c/fields/CheckoutMode__c.field-meta.xml
<CustomField>
    <fullName>CheckoutMode__c</fullName>
    <inlineHelpText>Checkout/order model for this market. 

- REGION = served by a subsidiary (current dealer flow). 
- FACTORY = bought direct from factories, order split and credit checked per factory.</inlineHelpText>
    <label>Checkout Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGION</fullName>
                <default>true</default>
                <label>Region (via subsidiary)</label>
            </value>
            <value>
                <fullName>FACTORY</fullName>
                <label>Factory (direct)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>