force-app/main/default/objects/B2BMarketSettings__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Market Label</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>