force-app/main/default/objects/B2BMarketSettings__c/fields/PalletSurchargeMode__c.field-meta.xml
<CustomField>
    <fullName>PalletSurchargeMode__c</fullName>
    <description>Modo de aplicación del recargo por despaletizado</description>
    <label>Pallet Surcharge Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_APPLICABLE</fullName>
                <default>true</default>
                <label>NOT_APPLICABLE</label>
            </value>
            <value>
                <fullName>FIXED_BASES_002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>