force-app/main/default/objects/B2BMarketSettings__c/fields/SalesOrgScope__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgScope__c</fullName>
    <label>Sales Org Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXPORT</fullName>
                <default>true</default>
                <label>EXPORT</label>
            </value>
            <value>
                <fullName>NATIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>