force-app/main/default/objects/B2BMarketSettings__c/fields/ShadeEnabled__c.field-meta.xml
<CustomField>
    <fullName>ShadeEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shade Enabled</label>
    <type>Checkbox</type>
</CustomField>