force-app/main/default/objects/B2BMarketSettings__c/fields/StockDisplay__c.field-meta.xml
<CustomField>
    <fullName>StockDisplay__c</fullName>
    <label>Stock Display</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <label>Do not show stock</label>
            </value>
            <value>
                <fullName>STATUS</fullName>
                <label>Show stock status</label>
            </value>
            <value>
                <fullName>QUANTITY</fullName>
                <label>Show stock quantities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>