force-app/main/default/objects/B2BMarketSettings__c/fields/UnitSystem__c.field-meta.xml
<CustomField>
    <fullName>UnitSystem__c</fullName>
    <label>Unit System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>METRIC</fullName>
                <default>true</default>
                <label>METRIC</label>
            </value>
            <value>
                <fullName>IMPERIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>