force-app/main/default/objects/B2BMarketSettings__c/fields/ValidatePrices__c.field-meta.xml
<CustomField>
    <fullName>ValidatePrices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires double validation of proces by requesting a valuation to teh backend</description>
    <label>ValidatePrices</label>
    <type>Checkbox</type>
</CustomField>