force-app/main/default/objects/B2BMarketSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CountryCode__c</columns>
    <columns>Label__c</columns>
    <columns>Active__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>